# CRUD_fastapi_postgresql_streamlit

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  router.py  schema.py
frontend/: Dockerfile  app.py
