[tool.poetry]
name = "crud-fastapi-postgresql-streamlit"
version = "0.1.0"
description = ""
authors = ["cassianodescovi <cassianodescovi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
email-validator = "^2.1.1"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
pandas = "^2.2.2"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
